<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">Moto G</string>

    <string name="category_display_title">Display</string>

    <string name="color_calibration_title_head">Color Calibration</string>
    <string name="color_calibration_summary_head">Calibrate display color</string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>

    <string name="sunlight_enhancement_title_head">Sunlight Enhancement</string>
    <string name="sunlight_enhancement_summary_head">Enhance display visibility in the sun</string>

    <string name="category_vibration_title">Vibration</string>
    <string name="vibration_title_head">Vibration</string>
    <string name="vibration_summary_head">Control vibration intensity</string>
    <string name="vibration_title">Vibration intensity</string>
    <string name="vibration_test_title">Test</string>

    <string name="button_reset_title">Reset</string>

    <string name="advanced_settings">Advanced</string>

</resources>
